# client-server

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.h.in  masters.txt  version.h.in
.github/workflows/: build.yml  dev.yml  notify-dispatch.yml  notify.yml  pr.yml  publish.yml  push.yml  release.yml  upload.yml
CMake/: GenerateVersion.cmake
Code/Client/: Client.cpp  Client.h  DisplayInfo.cpp  DisplayInfo.h  EngineCache.cpp  Executor.cpp  Executor.h  FileCache.cpp  FileCache.h  FileDownloader.cpp  FileDownloader.h  FileRedirector.cpp  FileRedirector.h  GSMaster.cpp  GSMaster.h  GSMasterHook.cpp  GSMasterHook.h  HTTP.cpp  HTTP.h  HTTPClient.cpp  HTTPClient.h  Log.cpp  Log.h  MapDownloader.cpp  MapDownloader.h  MapExtractor.cpp  MapExtractor.h  ParticleManager.cpp  ParticleManager.h  Profile.cpp  Profile.h  ScriptBind_CPPAPI.cpp  ScriptBind_CPPAPI.h  ScriptCallbacks.cpp  ScriptCallbacks.h  ScriptCommands.cpp  ScriptCommands.h  ServerBrowser.cpp  ServerBrowser.h  ServerConnector.cpp  (+7 more)
Code/Cry3DEngine/: TimeOfDay.cpp  TimeOfDay.h
Code/CryAction/: ActionGame.cpp  ActionGame.h  ActionMapManager.cpp  ActionMapManager.h  ActorIterator.cpp  ActorIterator.h  ActorSystem.cpp  ActorSystem.h  AnimationGraphSystem.cpp  AnimationGraphSystem.h  CallbackTimer.cpp  CallbackTimer.h  DebrisMgr.cpp  DebrisMgr.h  DebugHistoryManager.cpp  DebugHistoryManager.h  DevMode.cpp  DevMode.h  DialogSystem.cpp  DialogSystem.h  EffectSystem.cpp  EffectSystem.h  EquipmentManager.cpp  EquipmentManager.h  FlowSystem.cpp  FlowSystem.h  GameChannel.cpp  GameChannel.h  GameClientChannel.cpp  GameClientChannel.h  GameClientNub.cpp  GameClientNub.h  GameContext.cpp  GameContext.h  GameFramework.cpp  GameFramework.h  GameFrameworkCVars.cpp  GameFrameworkCVars.h  GameObject.cpp  GameObject.h  (+84 more)
Code/CryAction/Vehicles/: ScriptBind_Vehicle.cpp  ScriptBind_Vehicle.h  ScriptBind_VehicleSeat.cpp  ScriptBind_VehicleSeat.h  ScriptBind_VehicleSystem.cpp  ScriptBind_VehicleSystem.h  Vehicle.cpp  Vehicle.h  VehicleAnimation.cpp  VehicleAnimation.h  VehicleCVars.cpp  VehicleCVars.h  VehicleComponent.cpp  VehicleComponent.h  VehicleDamageBehaviorAISignal.cpp  VehicleDamageBehaviorAISignal.h  VehicleDamageBehaviorDestroy.cpp  VehicleDamageBehaviorDestroy.h  VehicleDamageBehaviorDetachPart.cpp  VehicleDamageBehaviorDetachPart.h  VehicleDamageBehaviorEffect.cpp  (+100 more)
Code/CryCommon/: AgentParams.h  CGFContent.h  ConfigurableVariant.h  CrtDebugStats.h  CryArray.h  CryFile.h  CryMemoryManager_impl.h  CryName.h  CryPath.h  CryStructPack.cpp  CryThread.h  CryThreadImpl.h  CryThreadImpl_windows.h  CryThread_pthreads.h  CryThread_ptw32.h  CryThread_wingc.h  CryTypeInfo.h  Cry_GeoIntersect.h  Cry_Math.h  Cry_XOptimise.h  FrameProfiler.h  ICryAnimation.h  ICryPak.h  IDirectBee.h  IEntity.h  IEntityProxy.h  IEntitySystem.h  IFont.h  IGame.h  IGameStartup.h  IInput.h  ILMSerializationManager.h  ILog.h  IMaterial.h  IMovieSystem.h  IPhysics.h  IReadWriteXMLSink.h  IRenderer.h  IRendererD3D9.h  IReverbManager.h  (+17 more)
Code/CryFont/: CryFont.cpp  CryFont.h  Font.cpp  Font.h
Code/CryGame/: AIDemoInput.h  AVMine.cpp  Actor.cpp  Actor.h  Alien.cpp  Alien.h  AmmoParams.cpp  AmmoParams.h  AmmoPickup.cpp  AmmoPickup.h  Automatic.cpp  Automatic.h  Beam.cpp  Binocular.cpp  Binocular.h  Bullet.cpp  Bullet.h  BulletTime.cpp  Burst.cpp  Burst.h  C4.cpp  C4.h  C4Detonator.cpp  C4Detonator.h  C4Projectile.cpp  Charge.cpp  Charge.h  Claymore.cpp  ClientSynchedStorage.cpp  ClientSynchedStorage.h  CompatibilityAlienMovementController.cpp  CompatibilityAlienMovementController.h  DebugGun.cpp  DebugGun.h  Detonate.cpp  Detonate.h  EMPField.cpp  Fists.cpp  Fists.h  FlashAnimation.cpp  (+164 more)
Code/CryScriptSystem/: FunctionHandler.cpp  FunctionHandler.h  ScriptSystem.cpp  ScriptSystem.h  ScriptTable.cpp  ScriptTable.h  ScriptTimerManager.cpp  ScriptTimerManager.h  ScriptUtil.cpp  ScriptUtil.h
Code/CrySoundSystem/: AudioDeviceFmodEx400.cpp  AudioDeviceFmodEx400.h  AudioDeviceFmodEx400_NULL.cpp  AudioDeviceFmodEx400_NULL.h  AudioDeviceXenon.cpp  AudioDeviceXenon.h  CommandPlayerFmodEx400.cpp  CommandPlayerFmodEx400.h  CrySoundSystem.cpp  CrySoundSystem.rc  CrySoundSystem_uber.cpp  DebugLogger.cpp  DebugLogger.h  FileCacheManager.cpp  FileCacheManager.h  IAudioDevice.h  IPlatformSound.h  IReverbInstance.h  ISoundAssetManager.h  ISoundBuffer.h  Microphone.cpp  Microphone.h  MicrophoneStream.cpp  MicrophoneStream.h  MoodManager.cpp  MoodManager.h  MusicLoadSink.h  PCMExporterDSP.cpp  PCMExporterDSP.h  PlatformSoundFmodEx400.cpp  PlatformSoundFmodEx400.h  PlatformSoundFmodEx400Event.cpp  PlatformSoundFmodEx400Event.h  PlatformSoundXenon.cpp  PlatformSoundXenon.h  PoolAllocSystem.h  Project.mk  ReverbInstance_Classic_Reverb.cpp  ReverbInstance_Classic_Reverb.h  ReverbInstance_FreeVerb.cpp  (+39 more)
Code/CrySystem/: CPUInfo.cpp  CPUInfo.h  CrashLogger.cpp  CrashLogger.h  CryLog.cpp  CryLog.h  CryMemoryManager.cpp  CryMemoryManager.h  CryPak.cpp  CryPak.h  GameWindow.cpp  GameWindow.h  HardwareMouse.cpp  HardwareMouse.h  LocalizationManager.cpp  LocalizationManager.h  Log.cpp  Log.h  Logger.cpp  Logger.h  RandomGenerator.cpp  RandomGenerator.h  ResourceList.cpp  ResourceList.h  StreamEngine.cpp  StreamEngine.h  System.cpp  System.h
Code/Launcher/: CPU.cpp  CPU.h  CPUInfo.cpp  CmdLine.cpp  CmdLine.h  CrashLogger.cpp  CrashLogger.h  CryMemoryManager.cpp  CryMemoryManager.h  DsoalDeployer.cpp  DsoalDeployer.h  Executor.cpp  Executor.h  GameWindow.cpp  GameWindow.h  IExecutorTask.h  Launcher.cpp  Launcher.h  Log.cpp  Log.h  Main.cpp  MemoryPatch.cpp  MemoryPatch.h  Patch.cpp  Patch.h  Resources.h  StartupTime.cpp  StartupTime.h  Util.cpp  Util.h
Config/: masters.txt
Pak/Entities/: Updater.ent
Pak/Fonts/: console.xml  default.xml  hud.xml
Pak/Scripts/: JSON.lua
Resources/: ClientLauncher.rc  Launcher.manifest  Launcher.rc  ServerLauncher.rc
Scripts/: GameRules.lua  Localization.lua  Main.lua  RPC.lua
Tools/: changelog.py  xml2cpp_ammo.py  xml2cpp_items.py  xml2cpp_vehicles.py
enc_temp_folder/29e9965bcb402cc0445249181abe79fd/: HUDInterfaceEffects.cpp
(+783 files in other folders)
