cmake_minimum_required(VERSION 3.15)

################################################################################

project(CryMP-Client VERSION 1.0.0 LANGUAGES C CXX RC)

################################################################################

if(NOT MSVC)
	message(FATAL_ERROR "MSVC is the only supported compiler!")
endif()

if(NOT CMAKE_MSVC_RUNTIME_LIBRARY)
	# use statically linked MSVC runtime library
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

################################################################################

# detect 64-bit compiler
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	set(BUILD_64BIT TRUE)
	message(STATUS "64-bit build")
else()
	message(STATUS "32-bit build")
endif()

if(BUILD_64BIT)
	set(CRYMP_CLIENT_EXE "CryMP-Client64")
else()
	set(CRYMP_CLIENT_EXE "CryMP-Client32")
endif()

################################################################################

add_executable(${CRYMP_CLIENT_EXE} WIN32
  Code/Client/Client.cpp
  Code/Client/Client.h
  Code/Client/Executor.cpp
  Code/Client/Executor.h
  Code/Client/FileCache.cpp
  Code/Client/FileCache.h
  Code/Client/FileDownloader.cpp
  Code/Client/FileDownloader.h
  Code/Client/FileRedirector.cpp
  Code/Client/FileRedirector.h
  Code/Client/GSMasterHook.cpp
  Code/Client/GSMasterHook.h
  Code/Client/HTTP.cpp
  Code/Client/HTTP.h
  Code/Client/HTTPClient.cpp
  Code/Client/HTTPClient.h
  Code/Client/MapDownloader.cpp
  Code/Client/MapDownloader.h
  Code/Client/MapExtractor.cpp
  Code/Client/MapExtractor.h
  Code/Client/ScriptBind_CPPAPI.cpp
  Code/Client/ScriptBind_CPPAPI.h
  Code/Client/ScriptCallbacks.cpp
  Code/Client/ScriptCallbacks.h
  Code/Client/ScriptCommands.cpp
  Code/Client/ScriptCommands.h
  Code/Client/ServerBrowser.cpp
  Code/Client/ServerBrowser.h
  Code/Client/ServerConnector.cpp
  Code/Client/ServerConnector.h
  Code/Client/ServerPAK.cpp
  Code/Client/ServerPAK.h
  Code/Client/SpeedAggregator.cpp
  Code/Client/SpeedAggregator.h
  Code/CryCommon/Cry3DEngine/CGF/CGFContent.h
  Code/CryCommon/Cry3DEngine/CGF/CryCompiledFile.h
  Code/CryCommon/Cry3DEngine/CGF/CryHeaders.h
  Code/CryCommon/Cry3DEngine/CGF/IChunkFile.h
  Code/CryCommon/Cry3DEngine/CryEngineDecalInfo.h
  Code/CryCommon/Cry3DEngine/CryParticleSpawnInfo.h
  Code/CryCommon/Cry3DEngine/CryVertexBinding.h
  Code/CryCommon/Cry3DEngine/I3DEngine.h
  Code/CryCommon/Cry3DEngine/I3DSampler.h
  Code/CryCommon/Cry3DEngine/IIndexedMesh.h
  Code/CryCommon/Cry3DEngine/ILMSerializationManager.h
  Code/CryCommon/Cry3DEngine/IMaterial.h
  Code/CryCommon/Cry3DEngine/ISplines.h
  Code/CryCommon/Cry3DEngine/IStatObj.h
  Code/CryCommon/Cry3DEngine/ISurfaceType.h
  Code/CryCommon/Cry3DEngine/LMCompStructures.h
  Code/CryCommon/Cry3DEngine/ParticleParams.h
  Code/CryCommon/CryAISystem/AIFormationDescriptor.h
  Code/CryCommon/CryAISystem/AITrackPatternDescriptor.h
  Code/CryCommon/CryAISystem/AgentParams.h
  Code/CryCommon/CryAISystem/IAIAction.h
  Code/CryCommon/CryAISystem/IAIGroup.h
  Code/CryCommon/CryAISystem/IAIRecorder.h
  Code/CryCommon/CryAISystem/IAISystem.h
  Code/CryCommon/CryAISystem/IAgent.h
  Code/CryCommon/CryAISystem/IInterestSystem.h
  Code/CryCommon/CryAction/IActionMapManager.h
  Code/CryCommon/CryAction/IActorSystem.h
  Code/CryCommon/CryAction/IAnimatedCharacter.h
  Code/CryCommon/CryAction/IAnimationGraph.h
  Code/CryCommon/CryAction/IAnimationGraphSystem.h
  Code/CryCommon/CryAction/IAnimationStateNode.h
  Code/CryCommon/CryAction/IDebrisMgr.h
  Code/CryCommon/CryAction/IDebugHistory.h
  Code/CryCommon/CryAction/IDialogSystem.h
  Code/CryCommon/CryAction/IEffectSystem.h
  Code/CryCommon/CryAction/IFlowSystem.h
  Code/CryCommon/CryAction/IGameFramework.h
  Code/CryCommon/CryAction/IGameObject.h
  Code/CryCommon/CryAction/IGameObjectSystem.h
  Code/CryCommon/CryAction/IGameRulesSystem.h
  Code/CryCommon/CryAction/IGameplayRecorder.h
  Code/CryCommon/CryAction/IInteractor.h
  Code/CryCommon/CryAction/IItem.h
  Code/CryCommon/CryAction/IItemSystem.h
  Code/CryCommon/CryAction/ILevelSystem.h
  Code/CryCommon/CryAction/ILoadGame.h
  Code/CryCommon/CryAction/IMaterialEffects.h
  Code/CryCommon/CryAction/IMovementController.h
  Code/CryCommon/CryAction/IPlayerProfiles.h
  Code/CryCommon/CryAction/ISaveGame.h
  Code/CryCommon/CryAction/ISubtitleManager.h
  Code/CryCommon/CryAction/IUIDraw.h
  Code/CryCommon/CryAction/IVehicleSystem.h
  Code/CryCommon/CryAction/IViewSystem.h
  Code/CryCommon/CryAction/IWeapon.h
  Code/CryCommon/CryAction/IWorldQuery.h
  Code/CryCommon/CryAction/Network/NetActionSync.h
  Code/CryCommon/CryAnimation/CryAnimationScriptCommands.h
  Code/CryCommon/CryAnimation/CryCharAnimationParams.h
  Code/CryCommon/CryAnimation/CryCharMorphParams.h
  Code/CryCommon/CryAnimation/ICryAnimation.h
  Code/CryCommon/CryAnimation/IFacialAnimation.h
  Code/CryCommon/CryAnimation/IJoystick.h
  Code/CryCommon/CryCore/ConfigurableVariant.h
  Code/CryCommon/CryCore/CryArray.h
  Code/CryCommon/CryCore/CryAssert.h
  Code/CryCommon/CryCore/CryAssert_impl.h
  Code/CryCommon/CryCore/CryFixedString.h
  Code/CryCommon/CryCore/CryModuleDefs.h
  Code/CryCommon/CryCore/CryName.h
  Code/CryCommon/CryCore/CryPodArray.h
  Code/CryCommon/CryCore/CrySizer.h
  Code/CryCommon/CryCore/CryString.h
  Code/CryCommon/CryCore/CryThread.h
  Code/CryCommon/CryCore/CryThreadImpl.h
  Code/CryCommon/CryCore/CryThread_windows.h
  Code/CryCommon/CryCore/Endian.h
  Code/CryCommon/CryCore/MSVCspecific.h
  Code/CryCommon/CryCore/MTPseudoRandom.cpp
  Code/CryCommon/CryCore/MTPseudoRandom.h
  Code/CryCommon/CryCore/MiniQueue.h
  Code/CryCommon/CryCore/MultiThread.h
  Code/CryCommon/CryCore/PoolAllocator.h
  Code/CryCommon/CryCore/PoolAllocatorSynchronization.h
  Code/CryCommon/CryCore/ProjectDefines.h
  Code/CryCommon/CryCore/ResourceCompilerHelper.h
  Code/CryCommon/CryCore/StlUtils.h
  Code/CryCommon/CryCore/StringUtils.h
  Code/CryCommon/CryCore/TArray.h
  Code/CryCommon/CryCore/TypeInfo.h
  Code/CryCommon/CryCore/Typelist.h
  Code/CryCommon/CryCore/TypelistUtils.h
  Code/CryCommon/CryCore/VectorMap.h
  Code/CryCommon/CryCore/VectorSet.h
  Code/CryCommon/CryCore/Win32specific.h
  Code/CryCommon/CryCore/Win64specific.h
  Code/CryCommon/CryCore/crc32.h
  Code/CryCommon/CryCore/functor.h
  Code/CryCommon/CryCore/platform.h
  Code/CryCommon/CryCore/platform_impl.h
  Code/CryCommon/CryCore/smartptr.h
  Code/CryCommon/CryEntitySystem/IEntity.h
  Code/CryCommon/CryEntitySystem/IEntityClass.h
  Code/CryCommon/CryEntitySystem/IEntityProxy.h
  Code/CryCommon/CryEntitySystem/IEntityRenderState.h
  Code/CryCommon/CryEntitySystem/IEntitySerialize.h
  Code/CryCommon/CryEntitySystem/IEntitySystem.h
  Code/CryCommon/CryFont/IFont.h
  Code/CryCommon/CryGame/CoherentValue.h
  Code/CryCommon/CryGame/GameUtils.h
  Code/CryCommon/CryGame/IGame.h
  Code/CryCommon/CryGame/IGameRef.h
  Code/CryCommon/CryGame/IGameStartup.h
  Code/CryCommon/CryGame/IGameTokens.h
  Code/CryCommon/CryInput/IHardwareMouse.h
  Code/CryCommon/CryInput/IInput.h
  Code/CryCommon/CryMath/AABBSV.h
  Code/CryCommon/CryMath/Cry_Camera.h
  Code/CryCommon/CryMath/Cry_Color.h
  Code/CryCommon/CryMath/Cry_Geo.h
  Code/CryCommon/CryMath/Cry_GeoDistance.h
  Code/CryCommon/CryMath/Cry_GeoIntersect.h
  Code/CryCommon/CryMath/Cry_GeoOverlap.h
  Code/CryCommon/CryMath/Cry_Math.h
  Code/CryCommon/CryMath/Cry_Matrix.h
  Code/CryCommon/CryMath/Cry_Quat.h
  Code/CryCommon/CryMath/Cry_ValidNumber.h
  Code/CryCommon/CryMath/Cry_Vector2.h
  Code/CryCommon/CryMath/Cry_Vector3.h
  Code/CryCommon/CryMath/Cry_XOptimise.h
  Code/CryCommon/CryMath/GeomQuery.h
  Code/CryCommon/CryMath/Range.h
  Code/CryCommon/CryMovie/AnimKey.h
  Code/CryCommon/CryMovie/IMovieSystem.h
  Code/CryCommon/CryNetwork/INetwork.h
  Code/CryCommon/CryNetwork/INetworkService.h
  Code/CryCommon/CryNetwork/IRemoteControl.h
  Code/CryCommon/CryNetwork/ISerialize.h
  Code/CryCommon/CryNetwork/ISimpleHttpServer.h
  Code/CryCommon/CryNetwork/NetHelpers.h
  Code/CryCommon/CryNetwork/SerializationTypes.h
  Code/CryCommon/CryNetwork/SerializeFwd.h
  Code/CryCommon/CryPhysics/IPhysics.h
  Code/CryCommon/CryPhysics/physinterface.h
  Code/CryCommon/CryPhysics/primitives.h
  Code/CryCommon/CryRenderer/IRenderAuxGeom.h
  Code/CryCommon/CryRenderer/IRenderMesh.h
  Code/CryCommon/CryRenderer/IRenderer.h
  Code/CryCommon/CryRenderer/IShader.h
  Code/CryCommon/CryRenderer/IVideoPlayer.h
  Code/CryCommon/CryRenderer/RendElement.h
  Code/CryCommon/CryRenderer/VertexBufferSource.h
  Code/CryCommon/CryRenderer/VertexFormats.h
  Code/CryCommon/CryScriptSystem/IScriptSystem.h
  Code/CryCommon/CryScriptSystem/ScriptHelpers.h
  Code/CryCommon/CrySoundSystem/IMusicSystem.h
  Code/CryCommon/CrySoundSystem/IReverbManager.h
  Code/CryCommon/CrySoundSystem/ISound.h
  Code/CryCommon/CrySoundSystem/ISoundMoodManager.h
  Code/CryCommon/CrySystem/CryFile.h
  Code/CryCommon/CrySystem/CryPath.h
  Code/CryCommon/CrySystem/CryVersion.h
  Code/CryCommon/CrySystem/FrameProfiler.h
  Code/CryCommon/CrySystem/IAVI_Reader.h
  Code/CryCommon/CrySystem/IBudgetingSystem.h
  Code/CryCommon/CrySystem/ICmdLine.h
  Code/CryCommon/CrySystem/IConsole.h
  Code/CryCommon/CrySystem/ICryPak.h
  Code/CryCommon/CrySystem/IDataProbe.h
  Code/CryCommon/CrySystem/IFlashPlayer.h
  Code/CryCommon/CrySystem/IGlobalTaskScheduler.h
  Code/CryCommon/CrySystem/ILog.h
  Code/CryCommon/CrySystem/IMiniLog.h
  Code/CryCommon/CrySystem/IProcess.h
  Code/CryCommon/CrySystem/IReadWriteXMLSink.h
  Code/CryCommon/CrySystem/IResourceCollector.h
  Code/CryCommon/CrySystem/IStreamEngine.h
  Code/CryCommon/CrySystem/ISystem.h
  Code/CryCommon/CrySystem/ITestSystem.h
  Code/CryCommon/CrySystem/ITextModeConsole.h
  Code/CryCommon/CrySystem/IThreadTask.h
  Code/CryCommon/CrySystem/ITimer.h
  Code/CryCommon/CrySystem/IValidator.h
  Code/CryCommon/CrySystem/IXml.h
  Code/CryCommon/CrySystem/TimeValue.h
  Code/CryGame/AIDemoInput.h
  Code/CryGame/AVMine.cpp
  Code/CryGame/AVMine.h
  Code/CryGame/Actor.cpp
  Code/CryGame/Actor.h
  Code/CryGame/Alien.cpp
  Code/CryGame/Alien.h
  Code/CryGame/AmmoParams.cpp
  Code/CryGame/AmmoParams.h
  Code/CryGame/AmmoPickup.cpp
  Code/CryGame/AmmoPickup.h
  Code/CryGame/Automatic.cpp
  Code/CryGame/Automatic.h
  Code/CryGame/Beam.cpp
  Code/CryGame/Beam.h
  Code/CryGame/Binocular.cpp
  Code/CryGame/Binocular.h
  Code/CryGame/Bullet.cpp
  Code/CryGame/Bullet.h
  Code/CryGame/BulletTime.cpp
  Code/CryGame/BulletTime.h
  Code/CryGame/Burst.cpp
  Code/CryGame/Burst.h
  Code/CryGame/C4.cpp
  Code/CryGame/C4.h
  Code/CryGame/C4Detonator.cpp
  Code/CryGame/C4Detonator.h
  Code/CryGame/C4Projectile.cpp
  Code/CryGame/C4Projectile.h
  Code/CryGame/Charge.cpp
  Code/CryGame/Charge.h
  Code/CryGame/Claymore.cpp
  Code/CryGame/Claymore.h
  Code/CryGame/ClientSynchedStorage.cpp
  Code/CryGame/ClientSynchedStorage.h
  Code/CryGame/CompatibilityAlienMovementController.cpp
  Code/CryGame/CompatibilityAlienMovementController.h
  Code/CryGame/DebugGun.cpp
  Code/CryGame/DebugGun.h
  Code/CryGame/Detonate.cpp
  Code/CryGame/Detonate.h
  Code/CryGame/EMPField.cpp
  Code/CryGame/EMPField.h
  Code/CryGame/Environment/BattleDust.cpp
  Code/CryGame/Environment/BattleDust.h
  Code/CryGame/Environment/FlowTornado.cpp
  Code/CryGame/Environment/FlowTornado.h
  Code/CryGame/Environment/Shake.cpp
  Code/CryGame/Environment/Shake.h
  Code/CryGame/Environment/Tornado.cpp
  Code/CryGame/Environment/Tornado.h
  Code/CryGame/Fists.cpp
  Code/CryGame/Fists.h
  Code/CryGame/FlashAnimation.cpp
  Code/CryGame/FlashAnimation.h
  Code/CryGame/FlowItemAnimation.cpp
  Code/CryGame/FlowItemAnimation.h
  Code/CryGame/FlowVehicleNodes.cpp
  Code/CryGame/FreezingBeam.cpp
  Code/CryGame/FreezingBeam.h
  Code/CryGame/Game.cpp
  Code/CryGame/Game.h
  Code/CryGame/GameActions.cpp
  Code/CryGame/GameActions.h
  Code/CryGame/GameCVars.cpp
  Code/CryGame/GameCVars.h
  Code/CryGame/GameFactory.cpp
  Code/CryGame/GameFactory.h
  Code/CryGame/GameRules.cpp
  Code/CryGame/GameRules.h
  Code/CryGame/GameRulesClientServer.cpp
  Code/CryGame/GrabHandler.cpp
  Code/CryGame/GrabHandler.h
  Code/CryGame/GunTurret.cpp
  Code/CryGame/GunTurret.h
  Code/CryGame/HUD/FlashPlayerNULL.h
  Code/CryGame/HUD/GameFlashAnimation.cpp
  Code/CryGame/HUD/GameFlashAnimation.h
  Code/CryGame/HUD/GameFlashLogic.cpp
  Code/CryGame/HUD/GameFlashLogic.h
  Code/CryGame/HUD/HUD.cpp
  Code/CryGame/HUD/HUD.h
  Code/CryGame/HUD/HUDAirStrike.cpp
  Code/CryGame/HUD/HUDCommon.cpp
  Code/CryGame/HUD/HUDCommon.h
  Code/CryGame/HUD/HUDCrosshair.cpp
  Code/CryGame/HUD/HUDCrosshair.h
  Code/CryGame/HUD/HUDEnums.h
  Code/CryGame/HUD/HUDHealthEnergyWeapon.cpp
  Code/CryGame/HUD/HUDInterfaceEffects.cpp
  Code/CryGame/HUD/HUDMissionObjectiveSystem.cpp
  Code/CryGame/HUD/HUDMissionObjectiveSystem.h
  Code/CryGame/HUD/HUDObituary.cpp
  Code/CryGame/HUD/HUDObituary.h
  Code/CryGame/HUD/HUDObject.cpp
  Code/CryGame/HUD/HUDObject.h
  Code/CryGame/HUD/HUDPDA.cpp
  Code/CryGame/HUD/HUDPowerStruggle.cpp
  Code/CryGame/HUD/HUDPowerStruggle.h
  Code/CryGame/HUD/HUDRadar.cpp
  Code/CryGame/HUD/HUDRadar.h
  Code/CryGame/HUD/HUDScopes.cpp
  Code/CryGame/HUD/HUDScopes.h
  Code/CryGame/HUD/HUDScore.cpp
  Code/CryGame/HUD/HUDScore.h
  Code/CryGame/HUD/HUDSilhouettes.cpp
  Code/CryGame/HUD/HUDSilhouettes.h
  Code/CryGame/HUD/HUDSoundImpl.cpp
  Code/CryGame/HUD/HUDTagNames.cpp
  Code/CryGame/HUD/HUDTagNames.h
  Code/CryGame/HUD/HUDTextArea.cpp
  Code/CryGame/HUD/HUDTextArea.h
  Code/CryGame/HUD/HUDTextChat.cpp
  Code/CryGame/HUD/HUDTextChat.h
  Code/CryGame/HUD/HUDTextEvents.cpp
  Code/CryGame/HUD/HUDVehicleInterface.cpp
  Code/CryGame/HUD/HUDVehicleInterface.h
  Code/CryGame/HUD/HUDWeaponAccessories.cpp
  Code/CryGame/HUD/ScriptBind_HUD.cpp
  Code/CryGame/HUD/ScriptBind_HUD.h
  Code/CryGame/HUD/Tweaks/HUDTweakMenu.cpp
  Code/CryGame/HUD/Tweaks/HUDTweakMenu.h
  Code/CryGame/HUD/Tweaks/TweakCommon.cpp
  Code/CryGame/HUD/Tweaks/TweakCommon.h
  Code/CryGame/HUD/Tweaks/TweakMenu.cpp
  Code/CryGame/HUD/Tweaks/TweakMenu.h
  Code/CryGame/HUD/Tweaks/TweakMetadata.cpp
  Code/CryGame/HUD/Tweaks/TweakMetadata.h
  Code/CryGame/HUD/Tweaks/TweakMetadataCVAR.cpp
  Code/CryGame/HUD/Tweaks/TweakMetadataCVAR.h
  Code/CryGame/HUD/Tweaks/TweakMetadataLUA.cpp
  Code/CryGame/HUD/Tweaks/TweakMetadataLUA.h
  Code/CryGame/HUD/Tweaks/TweakTraverser.cpp
  Code/CryGame/HUD/Tweaks/TweakTraverser.h
  Code/CryGame/HomingMissile.cpp
  Code/CryGame/HomingMissile.h
  Code/CryGame/Hunter.cpp
  Code/CryGame/Hunter.h
  Code/CryGame/IPlayerInput.h
  Code/CryGame/IronSight.cpp
  Code/CryGame/IronSight.h
  Code/CryGame/Item.cpp
  Code/CryGame/Item.h
  Code/CryGame/ItemAccessory.cpp
  Code/CryGame/ItemClientServer.cpp
  Code/CryGame/ItemDualWield.cpp
  Code/CryGame/ItemEffect.cpp
  Code/CryGame/ItemEvents.cpp
  Code/CryGame/ItemParamReader.h
  Code/CryGame/ItemParams.cpp
  Code/CryGame/ItemResource.cpp
  Code/CryGame/ItemScheduler.cpp
  Code/CryGame/ItemScheduler.h
  Code/CryGame/ItemSharedParams.cpp
  Code/CryGame/ItemSharedParams.h
  Code/CryGame/ItemString.h
  Code/CryGame/ItemView.cpp
  Code/CryGame/Lam.cpp
  Code/CryGame/Lam.h
  Code/CryGame/MPTutorial.cpp
  Code/CryGame/MPTutorial.h
  Code/CryGame/Melee.cpp
  Code/CryGame/Melee.h
  Code/CryGame/Menus/CreateGame.cpp
  Code/CryGame/Menus/CreateGame.h
  Code/CryGame/Menus/FlashMenuObject.cpp
  Code/CryGame/Menus/FlashMenuObject.h
  Code/CryGame/Menus/FlashMenuObjectOptions.cpp
  Code/CryGame/Menus/FlashMenuObjectProfiles.cpp
  Code/CryGame/Menus/FlashMenuObjectSingleplayer.cpp
  Code/CryGame/Menus/FlashMenuScreen.cpp
  Code/CryGame/Menus/FlashMenuScreen.h
  Code/CryGame/Menus/GameNetworkProfile.cpp
  Code/CryGame/Menus/GameNetworkProfile.h
  Code/CryGame/Menus/MPHub.cpp
  Code/CryGame/Menus/MPHub.h
  Code/CryGame/Menus/MPLobbyUI.cpp
  Code/CryGame/Menus/MPLobbyUI.h
  Code/CryGame/Menus/MultiplayerMenu.cpp
  Code/CryGame/Menus/MultiplayerMenu.h
  Code/CryGame/Menus/OptionsManager.cpp
  Code/CryGame/Menus/OptionsManager.h
  Code/CryGame/Menus/QuickGame.cpp
  Code/CryGame/Menus/QuickGame.h
  Code/CryGame/NanoSuit.cpp
  Code/CryGame/NanoSuit.h
  Code/CryGame/NetInputChainDebug.cpp
  Code/CryGame/NetInputChainDebug.h
  Code/CryGame/NetPlayerInput.cpp
  Code/CryGame/NetPlayerInput.h
  Code/CryGame/Nodes/FlowActorSensor.cpp
  Code/CryGame/Nodes/FlowFadeNode.cpp
  Code/CryGame/Nodes/FlowHitInfoNode.cpp
  Code/CryGame/Nodes/FlowNanoSuitNodes.cpp
  Code/CryGame/Nodes/FlowPlayerStagingNode.cpp
  Code/CryGame/Nodes/FlowPostFXNodes.cpp
  Code/CryGame/Nodes/G2FlowBaseNode.h
  Code/CryGame/Nodes/HUDNodes.cpp
  Code/CryGame/Nodes/MPNodes.cpp
  Code/CryGame/Nodes/WeaponNodes.cpp
  Code/CryGame/Observer.cpp
  Code/CryGame/Observer.h
  Code/CryGame/OffHand.cpp
  Code/CryGame/OffHand.h
  Code/CryGame/Plant.cpp
  Code/CryGame/Plant.h
  Code/CryGame/Player.cpp
  Code/CryGame/Player.h
  Code/CryGame/PlayerFeature.cpp
  Code/CryGame/PlayerFeature.h
  Code/CryGame/PlayerInput.cpp
  Code/CryGame/PlayerInput.h
  Code/CryGame/PlayerMovement.cpp
  Code/CryGame/PlayerMovement.h
  Code/CryGame/PlayerMovementController.cpp
  Code/CryGame/PlayerMovementController.h
  Code/CryGame/PlayerRotation.cpp
  Code/CryGame/PlayerRotation.h
  Code/CryGame/PlayerView.cpp
  Code/CryGame/PlayerView.h
  Code/CryGame/Projectile.cpp
  Code/CryGame/Projectile.h
  Code/CryGame/Radio.cpp
  Code/CryGame/Radio.h
  Code/CryGame/Rapid.cpp
  Code/CryGame/Rapid.h
  Code/CryGame/ReferenceWeapon.cpp
  Code/CryGame/ReferenceWeapon.h
  Code/CryGame/Rock.cpp
  Code/CryGame/Rock.h
  Code/CryGame/Rocket.cpp
  Code/CryGame/Rocket.h
  Code/CryGame/RocketLauncher.cpp
  Code/CryGame/RocketLauncher.h
  Code/CryGame/SPAnalyst.cpp
  Code/CryGame/SPAnalyst.h
  Code/CryGame/Scan.cpp
  Code/CryGame/Scan.h
  Code/CryGame/Scope.cpp
  Code/CryGame/Scope.h
  Code/CryGame/Scout.cpp
  Code/CryGame/Scout.h
  Code/CryGame/ScreenEffects.cpp
  Code/CryGame/ScreenEffects.h
  Code/CryGame/ScriptBind_Actor.cpp
  Code/CryGame/ScriptBind_Actor.h
  Code/CryGame/ScriptBind_Game.cpp
  Code/CryGame/ScriptBind_Game.h
  Code/CryGame/ScriptBind_GameRules.cpp
  Code/CryGame/ScriptBind_GameRules.h
  Code/CryGame/ScriptBind_Item.cpp
  Code/CryGame/ScriptBind_Item.h
  Code/CryGame/ScriptBind_Weapon.cpp
  Code/CryGame/ScriptBind_Weapon.h
  Code/CryGame/ScriptControlledPhysics.cpp
  Code/CryGame/ScriptControlledPhysics.h
  Code/CryGame/ScriptUtils.cpp
  Code/CryGame/ScriptUtils.h
  Code/CryGame/ServerSynchedStorage.cpp
  Code/CryGame/ServerSynchedStorage.h
  Code/CryGame/Shark.cpp
  Code/CryGame/Shark.h
  Code/CryGame/SharkMovementController.cpp
  Code/CryGame/SharkMovementController.h
  Code/CryGame/ShotValidator.cpp
  Code/CryGame/ShotValidator.h
  Code/CryGame/Shotgun.cpp
  Code/CryGame/Shotgun.h
  Code/CryGame/Single.cpp
  Code/CryGame/Single.h
  Code/CryGame/SingleTG.cpp
  Code/CryGame/SingleTG.h
  Code/CryGame/SoundMoods.cpp
  Code/CryGame/SoundMoods.h
  Code/CryGame/StdAfx.cpp
  Code/CryGame/StdAfx.h
  Code/CryGame/SynchedStorage.cpp
  Code/CryGame/SynchedStorage.h
  Code/CryGame/TacBullet.cpp
  Code/CryGame/TacBullet.h
  Code/CryGame/TagBullet.cpp
  Code/CryGame/TagBullet.h
  Code/CryGame/Throw.cpp
  Code/CryGame/Throw.h
  Code/CryGame/ThrowableWeapon.cpp
  Code/CryGame/ThrowableWeapon.h
  Code/CryGame/TracerManager.cpp
  Code/CryGame/TracerManager.h
  Code/CryGame/Trooper.cpp
  Code/CryGame/Trooper.h
  Code/CryGame/VehicleActionAutomaticDoor.cpp
  Code/CryGame/VehicleActionAutomaticDoor.h
  Code/CryGame/VehicleActionDeployRope.cpp
  Code/CryGame/VehicleActionDeployRope.h
  Code/CryGame/VehicleActionEntityAttachment.cpp
  Code/CryGame/VehicleActionEntityAttachment.h
  Code/CryGame/VehicleActionLandingGears.cpp
  Code/CryGame/VehicleActionLandingGears.h
  Code/CryGame/VehicleClient.cpp
  Code/CryGame/VehicleClient.h
  Code/CryGame/VehicleDamageBehaviorBurn.cpp
  Code/CryGame/VehicleDamageBehaviorBurn.h
  Code/CryGame/VehicleDamageBehaviorCameraShake.cpp
  Code/CryGame/VehicleDamageBehaviorCameraShake.h
  Code/CryGame/VehicleDamageBehaviorCollisionEx.cpp
  Code/CryGame/VehicleDamageBehaviorCollisionEx.h
  Code/CryGame/VehicleDamageBehaviorExplosion.cpp
  Code/CryGame/VehicleDamageBehaviorExplosion.h
  Code/CryGame/VehicleDamageBehaviorTire.cpp
  Code/CryGame/VehicleDamageBehaviorTire.h
  Code/CryGame/VehicleMovementAmphibious.cpp
  Code/CryGame/VehicleMovementAmphibious.h
  Code/CryGame/VehicleMovementBase.cpp
  Code/CryGame/VehicleMovementBase.h
  Code/CryGame/VehicleMovementHelicopter.cpp
  Code/CryGame/VehicleMovementHelicopter.h
  Code/CryGame/VehicleMovementHovercraft.cpp
  Code/CryGame/VehicleMovementHovercraft.h
  Code/CryGame/VehicleMovementStdBoat.cpp
  Code/CryGame/VehicleMovementStdBoat.h
  Code/CryGame/VehicleMovementStdWheeled.cpp
  Code/CryGame/VehicleMovementStdWheeled.h
  Code/CryGame/VehicleMovementTank.cpp
  Code/CryGame/VehicleMovementTank.h
  Code/CryGame/VehicleMovementTweaks.cpp
  Code/CryGame/VehicleMovementTweaks.h
  Code/CryGame/VehicleMovementVTOL.cpp
  Code/CryGame/VehicleMovementVTOL.h
  Code/CryGame/VehicleMovementWarrior.cpp
  Code/CryGame/VehicleMovementWarrior.h
  Code/CryGame/VehicleWeapon.cpp
  Code/CryGame/VehicleWeapon.h
  Code/CryGame/Voting.cpp
  Code/CryGame/Voting.h
  Code/CryGame/Weapon.cpp
  Code/CryGame/Weapon.h
  Code/CryGame/WeaponAttachmentManager.cpp
  Code/CryGame/WeaponAttachmentManager.h
  Code/CryGame/WeaponClientServer.cpp
  Code/CryGame/WeaponEvent.cpp
  Code/CryGame/WeaponInput.cpp
  Code/CryGame/WeaponSystem.cpp
  Code/CryGame/WeaponSystem.h
  Code/CryGame/WorkOnTarget.cpp
  Code/CryGame/WorkOnTarget.h
  Code/CryScriptSystem/LuaLibs/bitlib.c
  Code/CryScriptSystem/ScriptBindings/ScriptBindings.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBindings.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Movie.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Movie.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Particle.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Particle.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Physics.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Physics.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Script.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Script.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Sound.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_Sound.h
  Code/CryScriptSystem/ScriptBindings/ScriptBind_System.cpp
  Code/CryScriptSystem/ScriptBindings/ScriptBind_System.h
  Code/CryScriptSystem/FunctionHandler.cpp
  Code/CryScriptSystem/FunctionHandler.h
  Code/CryScriptSystem/ScriptSystem.cpp
  Code/CryScriptSystem/ScriptSystem.h
  Code/CryScriptSystem/ScriptTable.cpp
  Code/CryScriptSystem/ScriptTable.h
  Code/CryScriptSystem/ScriptTimerManager.cpp
  Code/CryScriptSystem/ScriptTimerManager.h
  Code/Launcher/CrashLogger.cpp
  Code/Launcher/CrashLogger.h
  Code/Launcher/CryMemoryManager.cpp
  Code/Launcher/CryMemoryManager.h
  Code/Launcher/GameWindow.cpp
  Code/Launcher/GameWindow.h
  Code/Launcher/Launcher.cpp
  Code/Launcher/Launcher.h
  Code/Launcher/Log.cpp
  Code/Launcher/Log.h
  Code/Launcher/Main.cpp
  Code/Launcher/Patch.cpp
  Code/Launcher/Patch.h
  Code/Launcher/Resources.h
  Code/Library/CPU.cpp
  Code/Library/CPU.h
  Code/Library/CmdLine.cpp
  Code/Library/CmdLine.h
  Code/Library/DLL.cpp
  Code/Library/DLL.h
  Code/Library/Error.cpp
  Code/Library/Error.h
  Code/Library/External/Lua/src/lapi.c
  Code/Library/External/Lua/src/lapi.h
  Code/Library/External/Lua/src/lauxlib.c
  Code/Library/External/Lua/src/lauxlib.h
  Code/Library/External/Lua/src/lbaselib.c
  Code/Library/External/Lua/src/lcode.c
  Code/Library/External/Lua/src/lcode.h
  Code/Library/External/Lua/src/ldblib.c
  Code/Library/External/Lua/src/ldebug.c
  Code/Library/External/Lua/src/ldebug.h
  Code/Library/External/Lua/src/ldo.c
  Code/Library/External/Lua/src/ldo.h
  Code/Library/External/Lua/src/ldump.c
  Code/Library/External/Lua/src/lfunc.c
  Code/Library/External/Lua/src/lfunc.h
  Code/Library/External/Lua/src/lgc.c
  Code/Library/External/Lua/src/lgc.h
  Code/Library/External/Lua/src/linit.c
  Code/Library/External/Lua/src/liolib.c
  Code/Library/External/Lua/src/llex.c
  Code/Library/External/Lua/src/llex.h
  Code/Library/External/Lua/src/llimits.h
  Code/Library/External/Lua/src/lmathlib.c
  Code/Library/External/Lua/src/lmem.c
  Code/Library/External/Lua/src/lmem.h
  Code/Library/External/Lua/src/loadlib.c
  Code/Library/External/Lua/src/lobject.c
  Code/Library/External/Lua/src/lobject.h
  Code/Library/External/Lua/src/lopcodes.c
  Code/Library/External/Lua/src/lopcodes.h
  Code/Library/External/Lua/src/loslib.c
  Code/Library/External/Lua/src/lparser.c
  Code/Library/External/Lua/src/lparser.h
  Code/Library/External/Lua/src/lstate.c
  Code/Library/External/Lua/src/lstate.h
  Code/Library/External/Lua/src/lstring.c
  Code/Library/External/Lua/src/lstring.h
  Code/Library/External/Lua/src/lstrlib.c
  Code/Library/External/Lua/src/ltable.c
  Code/Library/External/Lua/src/ltable.h
  Code/Library/External/Lua/src/ltablib.c
  Code/Library/External/Lua/src/ltm.c
  Code/Library/External/Lua/src/ltm.h
  Code/Library/External/Lua/src/luaconf.h
  Code/Library/External/Lua/src/lua.h
  Code/Library/External/Lua/src/lualib.h
  Code/Library/External/Lua/src/lundump.c
  Code/Library/External/Lua/src/lundump.h
  Code/Library/External/Lua/src/lvm.c
  Code/Library/External/Lua/src/lvm.h
  Code/Library/External/Lua/src/lzio.c
  Code/Library/External/Lua/src/lzio.h
  Code/Library/External/miniz/miniz.c
  Code/Library/External/miniz/miniz.h
  Code/Library/External/nlohmann/adl_serializer.hpp
  Code/Library/External/nlohmann/byte_container_with_subtype.hpp
  Code/Library/External/nlohmann/detail/conversions/from_json.hpp
  Code/Library/External/nlohmann/detail/conversions/to_chars.hpp
  Code/Library/External/nlohmann/detail/conversions/to_json.hpp
  Code/Library/External/nlohmann/detail/exceptions.hpp
  Code/Library/External/nlohmann/detail/hash.hpp
  Code/Library/External/nlohmann/detail/input/binary_reader.hpp
  Code/Library/External/nlohmann/detail/input/input_adapters.hpp
  Code/Library/External/nlohmann/detail/input/json_sax.hpp
  Code/Library/External/nlohmann/detail/input/lexer.hpp
  Code/Library/External/nlohmann/detail/input/parser.hpp
  Code/Library/External/nlohmann/detail/input/position_t.hpp
  Code/Library/External/nlohmann/detail/iterators/internal_iterator.hpp
  Code/Library/External/nlohmann/detail/iterators/iter_impl.hpp
  Code/Library/External/nlohmann/detail/iterators/iteration_proxy.hpp
  Code/Library/External/nlohmann/detail/iterators/iterator_traits.hpp
  Code/Library/External/nlohmann/detail/iterators/json_reverse_iterator.hpp
  Code/Library/External/nlohmann/detail/iterators/primitive_iterator.hpp
  Code/Library/External/nlohmann/detail/json_pointer.hpp
  Code/Library/External/nlohmann/detail/json_ref.hpp
  Code/Library/External/nlohmann/detail/macro_scope.hpp
  Code/Library/External/nlohmann/detail/macro_unscope.hpp
  Code/Library/External/nlohmann/detail/meta/cpp_future.hpp
  Code/Library/External/nlohmann/detail/meta/detected.hpp
  Code/Library/External/nlohmann/detail/meta/is_sax.hpp
  Code/Library/External/nlohmann/detail/meta/type_traits.hpp
  Code/Library/External/nlohmann/detail/meta/void_t.hpp
  Code/Library/External/nlohmann/detail/output/binary_writer.hpp
  Code/Library/External/nlohmann/detail/output/output_adapters.hpp
  Code/Library/External/nlohmann/detail/output/serializer.hpp
  Code/Library/External/nlohmann/detail/value_t.hpp
  Code/Library/External/nlohmann/json.hpp
  Code/Library/External/nlohmann/json_fwd.hpp
  Code/Library/External/nlohmann/ordered_map.hpp
  Code/Library/External/nlohmann/thirdparty/hedley/hedley.hpp
  Code/Library/External/nlohmann/thirdparty/hedley/hedley_undef.hpp
  Code/Library/External/picosha2.h
  Code/Library/Format.cpp
  Code/Library/Format.h
  Code/Library/RandomSeeder.h
  Code/Library/StringBuffer.cpp
  Code/Library/StringBuffer.h
  Code/Library/Util.cpp
  Code/Library/Util.h
  Code/Library/WinAPI.cpp
  Code/Library/WinAPI.h
  Resources/Launcher.manifest
  Resources/Launcher.rc
  ${PROJECT_BINARY_DIR}/config.h
)

################################################################################

set(CRYMP_CLIENT_RESOURCES
  ${PROJECT_SOURCE_DIR}/Resources/CursorAmber.cur
  ${PROJECT_SOURCE_DIR}/Resources/CursorBlue.cur
  ${PROJECT_SOURCE_DIR}/Resources/CursorGreen.cur
  ${PROJECT_SOURCE_DIR}/Resources/CursorRed.cur
  ${PROJECT_SOURCE_DIR}/Resources/CursorWhite.cur
  ${PROJECT_SOURCE_DIR}/Resources/Icon.ico
  ${PROJECT_SOURCE_DIR}/Scripts/GameRules.lua
  ${PROJECT_SOURCE_DIR}/Scripts/JSON.lua
  ${PROJECT_SOURCE_DIR}/Scripts/Main.lua
  ${PROJECT_SOURCE_DIR}/Scripts/RPC.lua
  ${PROJECT_SOURCE_DIR}/Config/masters.txt
)

set_source_files_properties(Resources/Launcher.rc PROPERTIES OBJECT_DEPENDS "${CRYMP_CLIENT_RESOURCES}")

################################################################################

set_property(TARGET ${CRYMP_CLIENT_EXE} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${CRYMP_CLIENT_EXE} PROPERTY CXX_STANDARD_REQUIRED ON)

if(BUILD_64BIT)
	target_compile_definitions(${CRYMP_CLIENT_EXE} PUBLIC BUILD_64BIT)
endif()

target_include_directories(${CRYMP_CLIENT_EXE} PRIVATE Code Code/Library/External ${PROJECT_BINARY_DIR})

target_link_libraries(${CRYMP_CLIENT_EXE} PRIVATE ws2_32 winhttp)

# prevent modern MSVC from enabling ASLR and unlock memory above 2 GB
target_link_options(${CRYMP_CLIENT_EXE} PRIVATE /DYNAMICBASE:NO /LARGEADDRESSAWARE)

################################################################################

configure_file(config.h.in ${PROJECT_BINARY_DIR}/config.h)
